Changelog
=========

1.0 (unreleased)
----------------

- Sort local and parent content together.

- Sort before we convert to objects.

- Only show content that user has permissions to see on PROPFIND

- hide workflow and actions menu for proxied content